<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">threats_and_preventions</string>
    <string name="action_settings">Settings</string>
    <string name="title_string">Threats and Preventions Fundamentals</string>
    <string name="threats_button">Threats &amp; Preventions</string>
    <string name="preventions_button">Preventions</string>
    <string name="quiz_button">Quiz Challenge</string>
    <string name="title_activity_threats_menu">ThreatsMenu</string>
    <string name="title_activity_preventions_menu">PreventionsMenu</string>
    <string name="threat_menu">Threats &amp; Preventions</string>
    <string name="denial_of_service_button">Denial Of Service</string>
    <string name="virus_button">Virus</string>
    <string name="title_activity_dos_info">DosInfo</string>
    <string name="dos_descr">In computing, a denial-of-service (DoS) or distributed denial-of-service (DDoS) attack is an attempt to make a machine or network resource unavailable to its intended users. Although the means to carry out, motives for, and targets of a DoS attack may vary, it generally consists of efforts to temporarily or indefinitely interrupt or suspend services of a host connected to the Internet.</string>
    <string name="title_activity_virus_info">VirusInfo</string>
    <string name="virus_description">A computer virus is a type of malware that, when executed, replicates by inserting copies of itself (possibly modified) into other computer programs, data files, or the boot sector of the hard drive; when this replication succeeds, the affected areas are then said to be infected. Viruses often perform some type of harmful activity on infected hosts, such as stealing hard disk space or CPU time, accessing private information, corrupting data, displaying political or humorous messages on the user\'s screen, spamming their contacts, or logging their keystrokes. However, not all viruses carry a destructive payload or attempt to hide themselves—the defining characteristic of viruses is that they are self-replicating computer programs which install themselves without the user\'s consent. </string>
    <string name="ok">OK</string>
    <string name="sniffer_button">Sniffer</string>
    <string name="title_activity_sniffer_info">SnifferInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="sniffer_description">Program or device that monitors data traveling over a network; can be used both for legitimate purposes and for stealing information from a network</string>
    <string name="prevention_title">Preventions</string>
    <string name="preventions">Preventions</string>
    <string name="dos_prev">Denial of Service attacks are very difficult to prevent. Currently, the best prevention is to hide/mask your IP address as much as possible so attackers cannot access it easily. There are also methods of setting up a proxy server as a means of reversing the attack.</string>
    <string name="virus_prev">Do not open any files attached to an email unless you know what it is. Do not download any files from strangers. Exercise caution when downloding files from the internet. Update Anti-Virus software regularly. Backup files on a regular basis.</string>
    <string name="sniffer_prev">Anti-Sniffing tools can be ran to see if any sniffing programs are running on the machine. Encryption is the best protection against any forn of traffic interception. This causes traffic to be unreadable to everyone but the intented reciever.</string>
    <string name="title_activity_spoofing_info">Spoofing_info</string>
    <string name="spoof_button">Spoofing</string>
    <string name="spoof_description">Technique used to gain unauthorized access where the intruder assumes a trusted IP address.</string>
    <string name="spoof_prev">Use an access control list to deny private IP address on your downstream interface. Implement filtering on both inbound and outbound traffic. Configure your routers to reject packets originating from outside your network that claim to originate from within.</string>
    <string name="title_activity_phishing_info">PhishingInfo</string>
    <string name="phishing_description">An attempt to acquire information such as usernames, passwords, and credit card details by disguising oneself as a trustworthy entity.</string>
    <string name="phishing_prev">Never enter personal information in a pop-up screen. Legitimate enterprises should never ask you to submit information in a pop-up screens, so dont do it. Never email personal or financial information, even if you are close with the recipient.</string>
    <string name="phishing_button">Phishing</string>
    <string name="title_activity_pharming_info">PharmingInfo</string>
    <string name="pharming_button">Pharming</string>
    <string name="pharming_description">Redirection of legitimate Web traffic (e.g., browser requests) to an illegitimate site for the purpose of obtaining private information.</string>
    <string name="pharming_prev">Do not use the links in an email to get to any web page. Avoid completing forms in email messages that ask for personal financial infromation. Be sure to use a secure web site when submitting credit card or other sensitive information via the web browser.</string>
    <string name="title_activity_middleman_info">MiddlemanInfo</string>
    <string name="middleman_description">Attacker monitors network packets, modifies them, and inserts them back into the network.</string>
    <string name="middleman_button">Man-In-The-Middle</string>
    <string name="middleman_prev">Using strong encryption is key to defending against man-in-the-middle attacks. Using outdated or proven ciphers creates a risk of the interceptor being able to decode the data. Latency examination between the two parties can be done to ensure no third party. If both parties take 20 seconds normally, and it takes 60 seconds to reach each party, this could indicate a third party.</string>
    <string name="title_activity_spam_info">SpamInfo</string>
    <string name="spam_button">Spam</string>
    <string name="spam_description">The use of electronic messaging systems to send unsolicited bulk messages indiscriminately. Usually done through e-mail spam but also includes instant messaging spam, search engine spam, and social spam. Spam is a popular method to distribute viruses or phishing/pharming attacks.</string>
    <string name="spam_prev">Do not click any links in a spam email. Set up rules to stop repeated messages containing the same spam. When signing up for a website, make sure the web master will not sell your address. This is usually the means that attackers get email lists to send the spam to.</string>
    <string name="title_activity_passwordcrack_info">PasswordcrackInfo</string>
    <string name="passwordcrack_button">Password Crack</string>
    <string name="passwordcrack_description">Attacker attempting to reverse calculate a password. This can be done with brute force (trying every possible combination of options of a password), dictionary (using commonly used passwords/words), or shoulder surfing (physically seeing the user type their password).</string>
    <string name="passwordcrack_prev">Using Message-Digest Algorithm (MD5) passwords. Use a &quot;strong&quot; password which includes numbers, symbols, upper/lower case letters. Do not use dictionary words in your passwords.</string>
    <string name="title_activity_trojan_info">TrojanInfo</string>
    <string name="trojan_button">Trojan</string>
    <string name="trojan_description">Software programs that hide their true nature and reveal their designed behavoir only when activated. They are frequently disguised as helpful, interesting, or necessary pieces of software (README.exe). They are often included with shareware or freeware packages.</string>
    <string name="trojan_prev">Never click on links in unsolicited emails. Install an anti-virus and browser security software and keep it up-to-date. Be careful downloading executable files or zip files from the internet or via email.</string>
    <string name="home">Home</string>
    <string name="quizresults">Quiz Results</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="back">Back</string>

</resources>
