<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DosInfo"
    android:background="@drawable/background" >
    
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:orientation="horizontal" 
        android:weightSum="6">

        <Button
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:background="#ffffff" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/denial_of_service_button"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">
        
        <RelativeLayout 
            android:id="@+id/rellayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

		    <TextView
		        android:id="@+id/dos_descr"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginTop="20dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:text="@string/dos_descr"
		        android:textColor="#ffffff" />
		
		    <TextView
		        android:id="@+id/preventions"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/dos_descr"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="14dp"
		        android:textSize="22sp"
		        android:textStyle="bold"
		        android:text="@string/preventions"
		        android:textColor="#ffffff" />
		
		     <TextView
		         android:id="@+id/dos_prev"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:layout_alignLeft="@+id/dos_descr"
		         android:layout_below="@+id/preventions"
		         android:text="@string/dos_prev" 
		         android:textColor="#ffffff"/>		     
		     
		</RelativeLayout>		     
		     
	</ScrollView>		     


</RelativeLayout>