<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Phishing_info"
    android:background="@drawable/background" >
    
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:orientation="horizontal" 
        android:weightSum="6">

        <Button
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:text="@string/back"
            android:textColor="#000000"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/phishing_button"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">
        
        <RelativeLayout 
            android:id="@+id/rellayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    
		    <TextView
		        android:id="@+id/phishing_description"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:text="@string/phishing_description"
		        android:textColor="#ffffff" />
		    
		    <TextView
		        android:id="@+id/preventions"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/phishing_description"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="17dp"
		        android:text="@string/preventions"
		        android:textSize="22sp"
		        android:textStyle="bold"
		        android:textColor="#ffffff" />
		    
		    <TextView
		        android:id="@+id/phishing_prev"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@+id/preventions"
		        android:layout_marginTop="20dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:text="@string/phishing_prev"
		        android:textColor="#ffffff" />

	    </RelativeLayout>
	    
    </ScrollView>

</RelativeLayout>
