<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VirusInfo" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#971425"
        android:orientation="horizontal" 
        android:weightSum="6">

        <Button
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="#971425"
            android:text="Back"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/virus_button"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    
    </LinearLayout>

    <TextView
        android:id="@+id/virus_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/virus_description" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/virus_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/ok" />

</RelativeLayout>
